[package]
name = "live-users-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "0.13.1", features = ["state"] }
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.27"
tracing-subscriber = "0.3"
axum = "0.7.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
get_if_addrs = "0.5.3"
local-ip-address = "0.6.1"
